<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corners_green"
    tools:context=".view.fragments.RightBottomSheetDialog">

    <TextView
        android:id="@+id/tvInCorrect"
        style="@style/SourceSans.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginTop="@dimen/unit8"
        android:gravity="center"
        android:padding="@dimen/text_body_padding"
        android:text="@string/correct"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTheQuestionRight"
        style="@style/SourceSans.Body1"
        android:layout_width="0dp"
        android:layout_height="@dimen/large_box_size"
        android:gravity="center"
        android:padding="@dimen/text_body_padding"
        android:text="@string/the_right_answer"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvInCorrect"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvCorrectAnswerRight"
        style="@style/SourceSans.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        android:gravity="center"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTheQuestionRight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btContinueMcqRight"
        style="@style/SourceSans.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/session_side_margin"
        android:layout_marginEnd="@dimen/session_side_margin"
        android:background="@drawable/white_shadow_button_bg"
        android:gravity="center|top"
        android:text="@string/continu"
        android:textColor="@color/candy_green"
        app:layout_constraintTop_toBottomOf="@id/tvCorrectAnswerRight" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/btContinueMcqRight"/>
</androidx.constraintlayout.widget.ConstraintLayout>