<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_exit"
            style="@style/SourceSans.Body1"
            android:id="@+id/tv_dialog"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/bt_no">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DialogButton"
                    android:id="@+id/button1"
                    android:text="@string/no"
                    style="@style/SourceSans.Button"
                    android:layout_gravity="center" />
            </FrameLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="50dp">
            </View>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/bt_yes"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DialogButton"
                    android:text="@string/yes"
                    android:id="@+id/button2"
                    style="@style/SourceSans.Button"
                    android:layout_gravity="center">
                </TextView>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>