<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvStatementQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/top_bar_animation_size"
        android:layout_marginTop="@dimen/session_top_margin"
        android:layout_marginStart="@dimen/session_side_margin"
        android:layout_marginEnd="@dimen/session_side_margin"
        android:padding="@dimen/unit8"
        android:gravity="start"
        android:text="@string/sort_them_based_on_true_and_false"
        style="@style/SourceSans.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStatement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/unit8"
        android:layout_marginBottom="@dimen/unit8_2"
        android:layout_marginStart="@dimen/session_side_margin"
        android:layout_marginEnd="@dimen/session_side_margin"
        android:padding="@dimen/text_body_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatementQuestion"
        app:layout_constraintBottom_toTopOf="@id/cardTruthBox"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cardTruthBox"
        android:layout_width="@dimen/large_box_size"
        android:layout_height="@dimen/large_box_size"
        android:layout_marginBottom="@dimen/session_bottom_margin"
        android:layout_marginStart="@dimen/session_side_margin"
        android:background="@drawable/green_button_bg"
        android:text="@string/True"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textColor="@color/white"
        style="@style/SourceSans.Button" >
    </TextView>

    <TextView
        android:id="@+id/cardFalseBox"
        android:layout_width="@dimen/large_box_size"
        android:layout_height="@dimen/large_box_size"
        android:layout_marginBottom="@dimen/session_bottom_margin"
        android:layout_marginEnd="@dimen/session_side_margin"
        android:background="@drawable/red_button_bg"
        android:gravity="center"
        android:text="@string/False"
        android:textColor="@color/white"
        style="@style/SourceSans.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>